cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(ply_transformer_demo)
find_package(PCL 1.2 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable (ply_transformer_demo ply_transformer_demo.cpp)
target_link_libraries (ply_transformer_demo ${PCL_LIBRARIES})
